k8s/iot-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-service
  namespace: smartcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-service
  template:
    metadata:
      labels:
        app: iot-service
    spec:
      containers:
        - name: iot-service
          image: smartcity-iot:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: iot-service
  namespace: smartcity
spec:
  selector:
    app: iot-service
  ports:
    - port: 3000
      targetPort: 3000
