k8s/oauth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-server
  namespace: smartcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-server
  template:
    metadata:
      labels:
        app: oauth-server
    spec:
      containers:
        - name: oauth-server
          image: diliasa/oauth-server:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-server-service
  namespace: smartcity
spec:
  selector:
    app: oauth-server
  ports:
    - port: 3002
      targetPort: 3002
