k8s/php-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-service
  namespace: smartcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-service
  template:
    metadata:
      labels:
        app: php-service
    spec:
      containers:
        - name: php-service
          image: diliasa/php-service:v1.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: smartcity
spec:
  selector:
    app: php-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
