k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcity-ingress
  namespace: smartcity
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: smartcity.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
          - path: /oauth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth-server-service
                port:
                  number: 3002
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: php-service-service
                port:
                  number: 8000
          - path: /pma(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
          - path: /rabbitmq(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
